typescript/checker/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression2.ts.stderr
error: UndefinedSymbol {
    sym: Atom('href' type=inline),
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            4,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression2.ts:1:1
  |
1 | href.match(/:\/\/(.[^/]+)/)[1];
  | ^^^^

